# iMotifPredictor

./: .gitignore  CITATION.cff  LICENSE  README.md  iMPropensity.py  iMotifPredictor_atac.py  iMotifPredictor_microarray.py  iMotifPredictor_microarray_and_atac.py  iMotifPredictor_seq.py  pyproject.toml  requirements.txt
AUROC/: predictions_and_true_labels_acc_gen.csv  predictions_and_true_labels_acc_gen_WDLPS.csv  predictions_and_true_labels_acc_mic_gen.csv  predictions_and_true_labels_acc_mic_gen_WDLPS.csv  predictions_and_true_labels_acc_mic_ran.csv  predictions_and_true_labels_acc_mic_ran_WDLPS.csv  predictions_and_true_labels_acc_random.csv  predictions_and_true_labels_acc_random_WDLPS.csv  predictions_and_true_labels_micro_gen.csv  predictions_and_true_labels_micro_gen_WDLPS.csv  predictions_and_true_labels_micro_perm.csv  predictions_and_true_labels_micro_perm_WDLPS.csv  predictions_and_true_labels_micro_rand.csv  predictions_and_true_labels_micro_rand_WDLPS.csv  predictions_and_true_labels_seq_gen.csv  predictions_and_true_labels_seq_gen_WDLPS.csv  predictions_and_true_labels_seq_perm.csv  predictions_and_true_labels_seq_perm_WDLPS.csv  predictions_and_true_labels_seq_random.csv  predictions_and_true_labels_seq_random_WDLPS.csv
atac_files/: calc_atac.py
data/: README.md
data_statistics/: Nucleotide_frequencies.py  analyze_core_length.py  convert_to_fasta.py  graph.py
fasta_files/: HEK_iM.fasta  HEK_iM_chr1.fasta  HEK_iM_neg.fasta  HEK_iM_neg_chr1.fasta  HEK_iM_perm_neg.fasta  HEK_iM_perm_neg_chr1.fasta  WDLPS_iM.fasta  WDLPS_iM_neg.fasta  negHekiM.fasta  (+3 more)
(+109 files in other folders)
