[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "imotifpredictor"
version = "0.1.0"
description = "iMotifPredictor: genome-wide i-motif prediction by multi-data integration"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
dependencies = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
